--- a/index.html
+++ b/index.html
@@ -201,64 +201,37 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            transform: translateY(20px);
+            transform: translateY(10px);
+            height: 100%;
+            /* Ensure container respects parent height */
         }
 
         #santa-svg {
-            width: 250px;
+            width: auto;
             height: auto;
+            max-height: 50vh;
+            /* Limit height on mobile landscape */
+            max-width: 250px;
             filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.3));
             transition: transform 0.5s;
             z-index: 5;
             animation: santa-breathe 3s ease-in-out infinite;
         }
 
-        @keyframes santa-breathe {
-
-            0%,
-            100% {
-                transform: scale(1) translateY(0);
-            }
-
-            50% {
-                transform: scale(1.02) translateY(-3px);
-            }
-        }
-
-        @keyframes blink {
-
-            0%,
-            90%,
-            100% {
-                opacity: 1;
-            }
-
-            95% {
-                opacity: 0;
-            }
-        }
-
-        @keyframes nod {
-
-            0%,
-            100% {
-                transform: rotate(0deg);
-            }
-
-            50% {
-                transform: rotate(5deg);
-            }
-        }
+        /* ... keyframes ... */
 
         #bubble {
             position: absolute;
-            left: 85%;
-            top: -30%;
+            left: 75%;
+            /* Move closer to center */
+            top: 0%;
+            /* Move down from -30% */
             background: white;
             border-radius: 50%;
-            padding: 15px;
-            width: 110px;
-            height: 110px;
+            padding: 10px;
+            width: 90px;
+            /* Slightly smaller */
+            height: 90px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -776,7 +749,7 @@
 
             <div id="santa-container">
                 <img id="character-img" src="./外部資源/聖誕老人.png" alt="Character"
-                    style="width: 300px; height: 300px; object-fit: contain; filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.3)); animation: santa-breathe 3s ease-in-out infinite;">
+                    style="width: auto; height: auto; max-height: 50vh; max-width: 300px; object-fit: contain; filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.3)); animation: santa-breathe 3s ease-in-out infinite;">
 
                 <div id="bubble">
                     <div id="bubble-content" class="prompt-content"></div>
