Fix combo mode layout on mobile: Adjust step indicator position

--- a/index.html
+++ b/index.html
@@ -667,8 +667,20 @@
 
             #combo-display {
                 font-size: 1rem;
-                top: 40px;
+                top: 35px;
                 left: 15px;
+            }
+
+            #combo-step-indicator {
+                top: 65px;
+                font-size: 1rem;
+                width: 100%;
+                text-align: center;
+                left: 0;
+                transform: none;
+                padding: 0;
+                background: transparent;
+                backdrop-filter: none;
             }
 
             #mode-indicator {
