--- a/index.html
+++ b/index.html
@@ -630,50 +630,54 @@
             aspect-ratio: 1;
         }
 
-        @media screen and (orientation: landscape) and (max-height: 600px) {
+        @media screen and (orientation: landscape) and (max-height: 800px) {
             #tv-view {
-                flex: 55;
+                flex: 50;
+                align-items: flex-end;
+                /* Align content to bottom of TV view */
+                padding-bottom: 10px;
             }
 
             #controls-view {
-                flex: 45;
+                flex: 50;
             }
 
             #santa-svg,
             #character-img {
-                max-height: 35vh !important;
-                /* Force smaller height */
-                max-width: 200px !important;
+                max-height: 30vh !important;
+                /* Even smaller */
+                max-width: 180px !important;
             }
 
             #bubble {
-                width: 70px;
-                height: 70px;
-                left: 65%;
-                /* Closer to Santa */
-                top: 0%;
+                width: 60px;
+                height: 60px;
+                left: 60%;
+                top: -10%;
+                /* Move up slightly */
                 padding: 5px;
             }
 
             .prompt-content {
-                font-size: 2rem;
+                font-size: 1.8rem;
             }
 
             #status-text {
-                font-size: 1.2rem;
-                top: 10px;
-                left: 15px;
+                font-size: 1rem;
+                top: 5px;
+                left: 10px;
             }
 
             #combo-display {
-                font-size: 1rem;
-                top: 35px;
-                left: 15px;
+                font-size: 0.9rem;
+                top: 25px;
+                left: 10px;
             }
 
             #combo-step-indicator {
-                top: 65px;
-                font-size: 1rem;
+                top: 50px;
+                /* Move up */
+                font-size: 0.9rem;
                 width: 100%;
                 text-align: center;
                 left: 0;
@@ -681,24 +685,25 @@
                 padding: 0;
                 background: transparent;
                 backdrop-filter: none;
+                text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+                /* Ensure readability */
+                z-index: 20;
             }
 
             #mode-indicator {
-                font-size: 0.8rem;
-                padding: 5px 10px;
-                bottom: 10px;
-                left: 15px;
+                display: none;
+                /* Hide mode indicator on small screens to save space */
             }
 
             #scoreboard-container {
-                transform: scale(0.7);
+                transform: scale(0.6);
                 transform-origin: top right;
-                top: 10px;
-                right: 15px;
+                top: 5px;
+                right: 10px;
             }
 
             #santa-container {
-                transform: translateY(5px);
+                transform: translateY(0);
             }
         }
 
