--- a/index.html
+++ b/index.html
@@ -702,6 +702,33 @@
                 right: 10px;
             }
 
+            .controls-grid.grid-6 {
+                grid-template-columns: repeat(6, 1fr);
+                grid-template-rows: 1fr;
+            }
+
+            .controls-grid .control-btn {
+                max-width: none;
+                height: 100%;
+                aspect-ratio: auto;
+                /* Remove square constraint */
+                padding: 5px;
+            }
+
+            .controls-grid .control-content>div:first-child {
+                width: 40px !important;
+                height: 40px !important;
+                font-size: 2rem !important;
+                /* Smaller emoji */
+            }
+
+            .controls-grid .control-content>div:last-child {
+                font-size: 0.7rem !important;
+                /* Smaller text */
+                display: none;
+                /* Hide text label if needed to save space */
+            }
+
             #santa-container {
                 transform: translateY(0);
             }
