--- a/index.html
+++ b/index.html
@@ -632,22 +632,28 @@
 
         @media screen and (orientation: landscape) and (max-height: 800px) {
             #tv-view {
-                flex: 45;
-                /* Reduce height to give more space to controls */
+                flex: 40;
+                /* Even smaller top section */
                 align-items: flex-end;
-                padding-bottom: 5px;
+                padding-bottom: 2px;
             }
 
             #controls-view {
-                flex: 55;
-                /* Increase height */
-                padding-bottom: 10px;
-                /* Ensure bottom padding */
+                flex: 60;
+                /* More space for controls */
+                padding-bottom: 5px;
+                display: flex;
+                align-items: center;
+                /* Center vertically */
             }
 
             .controls-grid {
-                padding: 5px 20px;
-                /* Reduce vertical padding */
+                padding: 2px 10px;
+                gap: 5px;
+                /* Tighter gap */
+                transform: scale(0.95);
+                /* Slight scale down to be safe */
+                transform-origin: center center;
             }
 
             #santa-svg,
