--- a/index.html
+++ b/index.html
@@ -68,16 +68,23 @@
             position: absolute;
             top: 5%;
             right: 10%;
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            /* Fix square look */
-            background: radial-gradient(circle at 30% 30%, #fff, #fdfcdc 50%, transparent 70%);
-            /* Tweak gradient */
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
-            /* Use box-shadow instead of drop-shadow for better performance/rendering */
-            opacity: 0.8;
+            width: 120px;
+            height: 120px;
             z-index: 0;
+            filter: drop-shadow(0 0 15px rgba(241, 196, 15, 0.5));
+            animation: float 6s ease-in-out infinite;
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translateY(0) rotate(0deg);
+            }
+
+            50% {
+                transform: translateY(-10px) rotate(2deg);
+            }
         }
 
         #aurora {
@@ -848,7 +855,39 @@
 <body>
 
     <div id="sky-bg"></div>
-    <div id="moon"></div>
+    <div id="moon">
+        <svg viewBox="0 0 100 100" width="100%" height="100%" style="overflow: visible;">
+            <!-- Crescent Moon Shape -->
+            <path d="M75 15 A 45 45 0 1 1 45 95 A 35 35 0 1 0 75 15 Z" fill="#f1c40f" />
+            <!-- Sleeping Eye -->
+            <path d="M45 50 Q 55 55 65 50" fill="none" stroke="#d35400" stroke-width="3" stroke-linecap="round"
+                opacity="0.6" />
+            <!-- Zzz Animation -->
+            <g>
+                <text x="80" y="30" font-family="Fredoka One" font-size="16" fill="#fff" opacity="0.9"
+                    style="animation: zzz 3s infinite">Z</text>
+                <text x="95" y="15" font-family="Fredoka One" font-size="12" fill="#fff" opacity="0.7"
+                    style="animation: zzz 3s 1s infinite">z</text>
+            </g>
+        </svg>
+        <style>
+            @keyframes zzz {
+                0% {
+                    transform: translate(0, 0);
+                    opacity: 0;
+                }
+
+                50% {
+                    opacity: 1;
+                }
+
+                100% {
+                    transform: translate(10px, -10px);
+                    opacity: 0;
+                }
+            }
+        </style>
+    </div>
     <div id="aurora"></div>
 
     <div id="debug-controls">
