--- a/index.html
+++ b/index.html
@@ -639,6 +639,13 @@
             max-width: none;
             height: auto;
             aspect-ratio: 1;
+            font-size: 3rem;
+            /* Default size */
+        }
+
+        .control-btn.animal-btn {
+            font-size: 4.5rem;
+            /* Larger for animals */
         }
 
         @media screen and (orientation: landscape) and (max-height: 800px) {
@@ -989,6 +996,13 @@
 
             <div id="status-text" style="left: 80px;">Listen...</div> <!-- Shifted right -->
             <div id="combo-display">🔥 Combo: 0</div>
+
+            <!-- Next Level Button -->
+            <button id="next-level-btn" onclick="nextLevel()"
+                style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; padding: 15px 30px; background: #2ecc71; color: white; border: 4px solid #fff; border-radius: 50px; cursor: pointer; z-index: 100; box-shadow: 0 10px 25px rgba(0,0,0,0.5); animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);">
+                Next Level ➡️
+            </button>
+
             <div id="combo-step-indicator">Step 1/3: Choose number</div>
             <div id="mode-indicator">🎨 Colors</div>
             <div id="scoreboard-container">
@@ -1070,7 +1084,10 @@
                     { name: 'bird', emoji: '🐦', plural: 'birds' },
                     { name: 'cat', emoji: '🐱', plural: 'cats' },
                     { name: 'dog', emoji: '🐶', plural: 'dogs' },
-                    { name: 'rabbit', emoji: '🐰', plural: 'rabbits' }
+                    { name: 'rabbit', emoji: '🐰', plural: 'rabbits' },
+                    { name: 'panda', emoji: '🐼', plural: 'pandas' },
+                    { name: 'frog', emoji: '🐸', plural: 'frogs' },
+                    { name: 'elephant', emoji: '🐘', plural: 'elephants' }
                 ]
             }
         };
@@ -1080,6 +1097,7 @@
             synth: window.speechSynthesis,
             currentSong: 0,
             bellInterval: null,
+            voice: null,
 
             songs: [
                 // Jingle Bells
@@ -1113,6 +1131,21 @@
                 this.ctx = new AudioContext();
                 // Procedural BGM removed - using real MP3 music instead
                 this.startBellSound();
+
+                // Init voices
+                if (speechSynthesis.onvoiceschanged !== undefined) {
+                    speechSynthesis.onvoiceschanged = () => this.setVoice();
+                }
+                this.setVoice();
+            },
+
+            setVoice: function () {
+                const voices = this.synth.getVoices();
+                // Try to find a male English voice first, or just a good English voice
+                // "Google US English" is often female. "Samantha" is female. "Daniel" is male.
+                // Let's look for "Male" or specific names, otherwise default.
+                this.voice = voices.find(v => v.lang.includes('en') && (v.name.includes('Male') || v.name.includes('Daniel') || v.name.includes('David'))) ||
+                    voices.find(v => v.lang.includes('en'));
             },
 
             playToneADSR: function (freq, duration, type = 'sine', vol = 0.2) {
@@ -1164,8 +1197,9 @@
                 }
                 const utter = new SpeechSynthesisUtterance(text);
                 utter.lang = lang;
-                utter.rate = 1.0;
-                utter.pitch = 1.2;
+                if (this.voice) utter.voice = this.voice;
+                utter.rate = 0.7; // Slower
+                utter.pitch = 1.3; // Higher pitch for "little boy" effect
                 this.synth.speak(utter);
             },
 
@@ -1512,10 +1546,26 @@
                 });
                 updateComboStepIndicator(2, 'Choose color');
             } else if (step === 2) {
-                // Show animals
+                // Show animals (Random 6)
                 grid.className = 'controls-grid grid-6';
-                comboConfig.animals.forEach(animalObj => {
-                    grid.appendChild(createAnimalButton(animalObj));
+
+                // Logic to pick 6 animals including the correct one
+                const currentTarget = state.comboSequence[state.playerInputIndex];
+                const correctAnimal = currentTarget.animal;
+
+                // Filter out the correct one from the pool
+                const otherAnimals = comboConfig.animals.filter(a => a.name !== correctAnimal.name);
+
+                // Shuffle and pick 5
+                const shuffledOthers = otherAnimals.sort(() => 0.5 - Math.random()).slice(0, 5);
+
+                // Combine and shuffle again
+                const displayAnimals = [correctAnimal, ...shuffledOthers].sort(() => 0.5 - Math.random());
+
+                displayAnimals.forEach(animalObj => {
+                    const btn = createAnimalButton(animalObj);
+                    btn.classList.add('animal-btn'); // Add class for larger size
+                    grid.appendChild(btn);
                 });
                 updateComboStepIndicator(3, 'Choose animal');
             }
