--- a/index.html
+++ b/index.html
@@ -644,8 +644,26 @@
         }
 
         .control-btn.animal-btn {
-            font-size: 6rem;
-            /* Larger for animals */
+            font-size: 8rem;
+            /* Super Size for animals */
+        }
+
+        #replay-level-btn {
+            display: none;
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 1.5rem;
+            padding: 12px 25px;
+            background: #f39c12;
+            color: white;
+            border: 3px solid #fff;
+            border-radius: 50px;
+            cursor: pointer;
+            z-index: 100;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+            animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
         @media screen and (orientation: landscape) and (max-height: 800px) {
@@ -999,8 +1017,13 @@
 
             <!-- Next Level Button -->
             <button id="next-level-btn" onclick="nextLevel()"
-                style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; padding: 15px 30px; background: #2ecc71; color: white; border: 4px solid #fff; border-radius: 50px; cursor: pointer; z-index: 100; box-shadow: 0 10px 25px rgba(0,0,0,0.5); animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);">
+                style="display: none; position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; padding: 15px 30px; background: #2ecc71; color: white; border: 4px solid #fff; border-radius: 50px; cursor: pointer; z-index: 100; box-shadow: 0 10px 25px rgba(0,0,0,0.5); animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);">
                 Next Level ➡️
+            </button>
+
+            <!-- Replay Level Button -->
+            <button id="replay-level-btn" onclick="replayLevel()">
+                Stay Here 🔄
             </button>
 
             <div id="combo-step-indicator">Step 1/3: Choose number</div>
@@ -1349,7 +1372,7 @@
         let state = {
             currentMode: 'color',
             score: 0,
-            maxScore: 5,
+            maxScore: 10,
             level: 1,
             sequence: [],
             playerInputIndex: 0,
@@ -2010,13 +2033,15 @@
             updateScoreboard();
 
             if (state.score >= state.maxScore) {
-                // Level Completed! Show Next Level button
+                // Level Completed! Show Next Level button AND Replay button
                 setTimeout(() => {
-                    const btn = document.getElementById('next-level-btn');
-                    if (btn) {
-                        btn.style.display = 'block';
-                        audioSys.speak("Next Level!");
-                    }
+                    const nextBtn = document.getElementById('next-level-btn');
+                    const replayBtn = document.getElementById('replay-level-btn');
+
+                    if (nextBtn) nextBtn.style.display = 'block';
+                    if (replayBtn) replayBtn.style.display = 'block';
+
+                    audioSys.speak("Level Complete!");
                     handleLevelUpEffectOnly();
                 }, 1500);
             } else {
@@ -2038,8 +2063,7 @@
         }
 
         function nextLevel() {
-            const btn = document.getElementById('next-level-btn');
-            if (btn) btn.style.display = 'none';
+            hideLevelButtons();
 
             state.level++;
             if (state.level > 5) state.level = 1; // Loop back
@@ -2048,6 +2072,22 @@
             updateScoreboard();
 
             startRound();
+        }
+
+        function replayLevel() {
+            hideLevelButtons();
+
+            state.score = 0;
+            updateScoreboard();
+
+            startRound();
+        }
+
+        function hideLevelButtons() {
+            const nextBtn = document.getElementById('next-level-btn');
+            const replayBtn = document.getElementById('replay-level-btn');
+            if (nextBtn) nextBtn.style.display = 'none';
+            if (replayBtn) replayBtn.style.display = 'none';
         }
 
         function handleWrong(item) {
