--- a/index.html
+++ b/index.html
@@ -644,26 +644,57 @@
         }
 
         .control-btn.animal-btn {
-            font-size: 8rem;
-            /* Super Size for animals */
+            /* Container style if needed */
+        }
+
+        .animal-emoji {
+            font-size: 5rem;
+            /* Base size */
+            line-height: 1;
+        }
+
+        #level-complete-container {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            flex-direction: column;
+            gap: 20px;
+            z-index: 100;
+            align-items: center;
+        }
+
+        .level-btn {
+            font-size: 1.8rem;
+            padding: 15px 40px;
+            color: white;
+            border: 4px solid #fff;
+            border-radius: 50px;
+            cursor: pointer;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+            animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            white-space: nowrap;
+        }
+
+        #next-level-btn {
+            background: #2ecc71;
         }
 
         #replay-level-btn {
-            display: none;
-            position: absolute;
-            top: 60%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 1.5rem;
-            padding: 12px 25px;
             background: #f39c12;
-            color: white;
-            border: 3px solid #fff;
-            border-radius: 50px;
-            cursor: pointer;
-            z-index: 100;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-            animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        @media screen and (orientation: landscape) and (max-height: 800px) {
+            .animal-emoji {
+                font-size: 4rem;
+                /* Smaller on landscape mobile */
+            }
+
+            #level-complete-container {
+                flex-direction: row;
+                /* Side by side on landscape */
+            }
         }
 
         @media screen and (orientation: landscape) and (max-height: 800px) {
@@ -1015,16 +1046,15 @@
             <div id="status-text" style="left: 80px;">Listen...</div> <!-- Shifted right -->
             <div id="combo-display">🔥 Combo: 0</div>
 
-            <!-- Next Level Button -->
-            <button id="next-level-btn" onclick="nextLevel()"
-                style="display: none; position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%); font-size: 2rem; padding: 15px 30px; background: #2ecc71; color: white; border: 4px solid #fff; border-radius: 50px; cursor: pointer; z-index: 100; box-shadow: 0 10px 25px rgba(0,0,0,0.5); animation: pop-in 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);">
-                Next Level ➡️
-            </button>
-
-            <!-- Replay Level Button -->
-            <button id="replay-level-btn" onclick="replayLevel()">
-                Stay Here 🔄
-            </button>
+            <!-- Level Complete Buttons Container -->
+            <div id="level-complete-container">
+                <button id="next-level-btn" class="level-btn" onclick="nextLevel()">
+                    Next Level ➡️
+                </button>
+                <button id="replay-level-btn" class="level-btn" onclick="replayLevel()">
+                    Stay Here 🔄
+                </button>
+            </div>
 
             <div id="combo-step-indicator">Step 1/3: Choose number</div>
             <div id="mode-indicator">🎨 Colors</div>
@@ -1653,14 +1683,14 @@
 
         function createAnimalButton(animalObj) {
             const btn = document.createElement('button');
-            btn.className = 'control-btn';
+            btn.className = 'control-btn animal-btn'; // Add class directly here
             btn.setAttribute('data-item', animalObj.name);
             btn.setAttribute('data-type', 'animal');
 
             btn.innerHTML = `
-                <div class="control-content" style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
-                    <div style="font-size: 3.5rem;">${animalObj.emoji}</div>
-                    <div style="font-size: 1rem; opacity: 0.9;">${animalObj.name}</div>
+                <div class="control-content" style="display: flex; flex-direction: column; align-items: center; gap: 5px;">
+                    <div class="animal-emoji">${animalObj.emoji}</div>
+                    <div class="animal-name" style="font-size: 1.2rem; opacity: 0.9;">${animalObj.name}</div>
                 </div>
             `;
 
@@ -2033,15 +2063,13 @@
             updateScoreboard();
 
             if (state.score >= state.maxScore) {
-                // Level Completed! Show Next Level button AND Replay button
+                // Level Completed! Show Buttons Container
                 setTimeout(() => {
-                    const nextBtn = document.getElementById('next-level-btn');
-                    const replayBtn = document.getElementById('replay-level-btn');
-
-                    if (nextBtn) nextBtn.style.display = 'block';
-                    if (replayBtn) replayBtn.style.display = 'block';
-
-                    audioSys.speak("Level Complete!");
+                    const container = document.getElementById('level-complete-container');
+                    if (container) {
+                        container.style.display = 'flex';
+                        audioSys.speak("Level Complete!");
+                    }
                     handleLevelUpEffectOnly();
                 }, 1500);
             } else {
@@ -2084,10 +2112,8 @@
         }
 
         function hideLevelButtons() {
-            const nextBtn = document.getElementById('next-level-btn');
-            const replayBtn = document.getElementById('replay-level-btn');
-            if (nextBtn) nextBtn.style.display = 'none';
-            if (replayBtn) replayBtn.style.display = 'none';
+            const container = document.getElementById('level-complete-container');
+            if (container) container.style.display = 'none';
         }
 
         function handleWrong(item) {
