Fix small animal images in grid: Remove CSS constraints on first-child elements in controls grid to allow larger emojis

--- a/index.html
+++ b/index.html
@@ -797,10 +797,9 @@
             }
 
             .controls-grid .control-content>div:first-child {
-                width: 40px !important;
-                height: 40px !important;
-                font-size: 2rem !important;
-                /* Smaller emoji */
+                width: auto !important;
+                height: auto !important;
+                /* font-size: 2rem !important; REMOVED constraint */
             }
 
             .controls-grid .control-content>div:last-child {
