Fix missing colors and add new color options: Resolve CSS conflict hiding color buttons and expand color palette

--- a/index.html
+++ b/index.html
@@ -797,9 +797,8 @@
             }
 
             .controls-grid .control-content>div:first-child {
-                width: auto !important;
-                height: auto !important;
-                /* font-size: 2rem !important; REMOVED constraint */
+                /* width: auto !important;  Removed to allow inline styles for colors */
+                /* height: auto !important; */
             }
 
             .controls-grid .control-content>div:last-child {
@@ -1128,7 +1127,13 @@
                     { name: 'blue', color: '#2980b9', emoji: '🔵' },
                     { name: 'yellow', color: '#f1c40f', emoji: '🟡' },
                     { name: 'purple', color: '#8e44ad', emoji: '🟣' },
-                    { name: 'orange', color: '#e67e22', emoji: '🟠' }
+                    { name: 'orange', color: '#e67e22', emoji: '🟠' },
+                    { name: 'pink', color: '#e91e63', emoji: '🩷' },
+                    { name: 'brown', color: '#795548', emoji: '🟤' },
+                    { name: 'black', color: '#2c3e50', emoji: '⚫' },
+                    { name: 'white', color: '#ecf0f1', emoji: '⚪' },
+                    { name: 'gray', color: '#95a5a6', emoji: '🩶' },
+                    { name: 'cyan', color: '#1abc9c', emoji: '💠' }
                 ],
                 animals: [
                     { name: 'crab', emoji: '🦀', plural: 'crabs' },
